# cpclient

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  configure.ac  valgrind-ubuntu-11.04.supp  valgrind-ubuntu-11.10.supp
doc/: browser.h  email.h  mainpage.h  manager.h  omadm.h  push-message.h  synchronisation.h  telephony.h
doc/doxygen/: Makefile.am  doxyfile.in
lib/include/: context.h  error-macros.h  error.h  file-peer.h  log.h  ptr-array.h  wp.h
lib/src/: characteristic.c  characteristic.h  context.c  file-posix.c  hmac-gnutls.c  hmac-peer.h  log.c  ptr-array.c  wbxml-libwbxml.c  wbxml-peer.h  wp.c
src/: callback.h  com.intel.cpclient.server.service.in  cpclient.c  dbus-error.c  dbus-error.h  imsi.c  imsi.h  pm-manager.c  pm-manager.h  provision-cp.c  provision-cp.h  provision-wp.c  provision-wp.h  provision.c  provision.h  settings.c  settings.h  tasks.c  tasks.h
testcases/commands/: create-and-sleep  parsecp  parsewp
testcases/examples/: bookmarks.xml  data-sync.xml  email.xml  internetmms.xml  omadm.xml  proxy-nap-group.xml  proxytest.xml  simplemms.xml
testharness/: provman
